fix spacing on home user polaroid

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -17,7 +17,7 @@
     .profile_img {
       float: none;
       width: 194px;
-      height: 225px;
+      height: 233px;
       margin: auto;
       display: block;
       position: relative;
